# ocibootstrap

./: Cargo.toml  README.md
ocibootstrap/: Cargo.toml
ocibootstrap-gpt/: Cargo.toml  README.md
ocibootstrap-gpt/src/: lib.rs
ocibootstrap-mbr/: Cargo.toml  README.md
ocibootstrap-mbr/src/: lib.rs
ocibootstrap-part/: Cargo.toml  README.md
ocibootstrap-part/src/: lib.rs
ocibootstrap-part/tests/: cast.rs  layout.rs  offsets.rs  round.rs
ocibootstrap-partitions-layout/: Cargo.toml
ocibootstrap-partitions-layout/examples/: json-schema.rs
ocibootstrap-partitions-layout/src/: lib.rs
ocibootstrap-partitions-layout/tests/: gpt.rs  lvm.rs  mbr.rs
ocibootstrap-registry/: Cargo.toml  README.md
ocibootstrap-registry/src/: json.rs  lib.rs  spec.rs
ocibootstrap-registry/src/spec/: auth.rs  v2.rs
ocibootstrap-registry/src/spec/v2/: docker.rs  oci.rs
ocibootstrap-tar-split/: Cargo.toml  README.md
ocibootstrap-tar-split/src/: lib.rs
ocibootstrap-tar-split/tests/: reader.rs
ocibootstrap-types/: Cargo.toml  README.md
ocibootstrap-types/src/: lib.rs
ocibootstrap/resources/: part-schema.json
ocibootstrap/src/: config.rs  container.rs  layout.rs  local.rs  main.rs  registry.rs  utils.rs
src/: config.rs  container.rs  gpt.rs  main.rs  spec.rs  types.rs  utils.rs
src/spec/: auth.rs  v2.rs
src/spec/v2/: docker.rs  oci.rs
