[package]
name = "ocibootstrap-gpt"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
description = "GUID Partition Table Generation Library"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
keywords = ["gpt", "partition", "uefi"]
categories = ["embedded", "filesystem", "hardware-support"]
repository = "https://github.com/mripard/ocibootstrap/"

[lints]
workspace = true

[dependencies]
bit_field = { version = "0.10.2", default-features = false }
crc32fast = { version = "1.4.2", default-features = false }
log = { version = "0.4.22", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
uuid = { version = "1.10.0", default-features = false, features = [
    "serde",
    "v4",
] }

[dev-dependencies]
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.128", default-features = false }
tempfile = "3.12.0"
test-log = { version = "0.2.16", default-features = false, features = ["log"] }
