[package]
name = "ocibootstrap-gpt"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
description = "GUID Partition Table Generation Library"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
keywords = ["gpt", "partition", "uefi"]
categories = ["embedded", "filesystem", "hardware-support"]
repository = "https://github.com/mripard/ocibootstrap/"

[lints]
workspace = true

[dependencies]
bit_field = { workspace = true }
crc32fast = { version = "1.4.2", default-features = false }
log = { workspace = true }
mbr = { workspace = true }
part = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
