[package]
name = "ocibootstrap-mbr"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
description = "MBR Partition Table Generation Library"
edition = "2024"
readme = "./README.md"
license-file = "../LICENSE"
keywords = ["mbr", "partition"]
categories = ["embedded", "filesystem", "hardware-support"]
repository = "https://github.com/mripard/ocibootstrap/"

[lints]
workspace = true

[dependencies]
bit_field = { workspace = true }
fastrand = { version = "2.3.0", default-features = false, features = [
    "std",
] }
log = { workspace = true }
num-traits = { workspace = true }
part = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
