[package]
name = "ocibootstrap-part"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
description = "Partition Table Helpers Library"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
keywords = ["partition"]
categories = ["filesystem"]
repository = "https://github.com/mripard/ocibootstrap/"

[lints]
workspace = true

[dependencies]
log = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
