[package]
name = "ocibootstrap-tar-split"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
description = "tar-split format implementation"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
categories = ["data-structures", "filesystem", "parsing"]
keywords = ["oci", "containers", "archives"]
repository = "https://github.com/mripard/ocibootstrap/"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true, features = ["alloc"] }
crc = { workspace = true }
flate2 = { version = "1.0.33", default-features = false, features = [
    "rust_backend",
] }
infer = { version = "0.16.0", default-features = false, features = ["std"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sha256 = { version = "1.5.0", default-features = false }
tar = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
