[package]
name = "ocibootstrap-types"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
description = "OCIBootstrap Common Types"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
keywords = ["types"]
categories = ["data-structures"]
repository = "https://github.com/mripard/ocibootstrap/"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.17", default-features = false, features = [
    "derive",
    "std",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
oci-spec = { version = "0.6.8", default-features = false, features = ["image"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.128", default-features = false }
thiserror = { version = "1.0.63", default-features = false }
toml = { version = "0.8.19", default-features = false }
url = { version = "2.5.2", default-features = false }
