[package]
name = "ocibootstrap-types"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
description = "OCIBootstrap Common Types"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
keywords = ["types"]
categories = ["data-structures"]
repository = "https://github.com/mripard/ocibootstrap/"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
oci-spec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { version = "1.0.63", default-features = false }
toml = { workspace = true }
url = { version = "2.5.2", default-features = false }
