[package]
name = "ocibootstrap-types"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
description = "OCIBootstrap Common Types"
edition = "2024"
readme = "./README.md"
license-file = "../LICENSE"
keywords = ["types"]
categories = ["data-structures"]
repository = "https://github.com/mripard/ocibootstrap/"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
oci-spec = { workspace = true }
serde_json = { workspace = true }
thiserror = { version = "2.0.11", default-features = false }
toml = { workspace = true }
url = { version = "2.5.4", default-features = false }
