[package]
name = "ocibootstrap"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
description = "Bootable Container to SD-Card utility"
edition = "2024"
readme = "../README.md"
license-file = "../LICENSE"
keywords = ["embedded", "containers"]
categories = ["development-tools", "embedded", "filesystem", "virtualization"]
repository = "https://github.com/mripard/ocibootstrap/"

[lints]
workspace = true

[build-dependencies]

[dependencies]
anyhow = { workspace = true, features = ["backtrace", "std"] }
base64 = { workspace = true }
clap = { workspace = true, features = ["help"] }
env_logger = { version = "0.11.5", default-features = false }
log = { workspace = true }
loopdev = { package = "loopdev-3", version = "0.5.1", default-features = false }
gpt = { workspace = true }
jiff = { version = "0.1.13", default-features = false, features = [
    "logging",
    "serde",
    "std",
    "tz-system",
] }
mbr = { workspace = true }
nix = { version = "0.29.0", default-features = false, features = ["user"] }
num-traits = { workspace = true }
oci-spec = { workspace = true }
once_cell = { version = "1.19.0", default-features = false }
psl = { version = "2.1.55", default-features = false, features = ["helpers"] }
serde = { workspace = true }
serde_json = { workspace = true }
sys-mount = { version = "3.0.1", default-features = false }
tar = { workspace = true }
tar_split = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true, features = ["parse"] }
types = { workspace = true }
uuid = { workspace = true }
xdg = { version = "2.5.2", default-features = false }

[dev-dependencies]
test-log = { workspace = true }
